--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sqflite: ^2.0.3+1
+  sqflite_common_ffi: ^2.1.1+1
+  path: ^1.8.1
+  sqlite3: ^1.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
